<resources>
    <string name="app_name">水库巡检</string>
    <string name="user_login">水库巡检系统\n用户登陆</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login_rememberPwd">记住密码</string>
    <string name="login">登陆</string>
    <string name="welcome">欢迎使用水库巡检系统手机客户端</string>
    <string name="reservoir_info">水库信息</string>
    <string name="inspection_exe">巡检执行</string>
    <string name="inspection_record">巡检记录</string>
    <string name="inspection_task">巡检任务</string>
    <string name="inspection_plan">巡检计划</string>
    <string name="inspection_calendar">巡检日历</string>
    <string name="avatar">头像</string>
    <string name="sign_out">注销</string>
    <string name="state">状态</string>
    <string name="description">描述</string>
    <string name="change_ip">设置服务器ip地址</string>
    <string name="save">保存</string>
    <string name="commit">提交</string>
    <string name="video">视频</string>
    <string name="picture">拍照</string>
    <string name="exception_desc">填写异常信息描述</string>
    <string name="desc">填写其它信息</string>
    <string name="facility_list">巡检设施列表</string>
    <string name="map">地图</string>
    <string name="inspection_item">巡检项</string>
</resources>
